# dioxus-gp-deploy

./: 404.html  Cargo.toml  Dioxus.toml  README.md  index.html
.github/workflows/: main.yml
assets/dioxus/: dioxus-gp-deploy.js  dioxus-gp-deploy.js.br  dioxus-gp-deploy_bg.wasm  dioxus-gp-deploy_bg.wasm.br
assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
docs/assets/dioxus/: dioxus-gp-deploy.js  dioxus-gp-deploy.js.br  dioxus-gp-deploy_bg.wasm  dioxus-gp-deploy_bg.wasm.br
docs/assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
src/: main.rs
